<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_medium"
    android:layout_marginBottom="@dimen/margin_medium">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_margin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_large" />

    <TextView
        android:id="@+id/item_forecast_date"
        style="@style/TextAppearance.AppCompat.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/left_margin_guideline"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="2019-11-23" />

    <View
        android:id="@+id/item_forecast_divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_small"
        android:alpha="0.3"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/item_forecast_date" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/column1_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="item_forecast_temperature_label,item_forecast_pressure_label,item_forecast_humidity_label,item_forecast_current_condition_label,item_forecast_chance_of_precipitation_label" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/column2_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="item_forecast_temperature_value,item_forecast_pressure_value,item_forecast_humidity_value,item_forecast_current_condition_value,item_forecast_chance_of_precipitation_value" />

    <TextView
        android:id="@+id/item_forecast_temperature_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/item_forecast_temperature_label"
        app:layout_constraintStart_toStartOf="@id/left_margin_guideline"
        app:layout_constraintTop_toBottomOf="@id/item_forecast_divider" />

    <TextView
        android:id="@+id/item_forecast_temperature_value"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/item_forecast_temperature_label"
        app:layout_constraintStart_toEndOf="@id/column1_barrier"
        tools:text="78" />

    <TextView
        android:id="@+id/item_forecast_pressure_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_medium"
        android:text="@string/item_forecast_pressure_label"
        app:layout_constraintStart_toEndOf="@id/left_margin_guideline"
        app:layout_constraintTop_toBottomOf="@id/item_forecast_temperature_label" />

    <TextView
        android:id="@+id/item_forecast_pressure_value"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/item_forecast_pressure_label"
        app:layout_constraintStart_toEndOf="@id/column1_barrier"
        tools:text="1015.0" />

    <TextView
        android:id="@+id/item_forecast_humidity_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_forecast_humidity_label"
        app:layout_constraintStart_toStartOf="@id/left_margin_guideline"
        app:layout_constraintTop_toBottomOf="@id/item_forecast_pressure_label" />

    <TextView
        android:id="@+id/item_forecast_humidity_value"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/item_forecast_humidity_label"
        app:layout_constraintStart_toEndOf="@id/column1_barrier"
        tools:text="70" />

    <TextView
        android:id="@+id/item_forecast_current_condition_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_forecast_current_condition_label"
        app:layout_constraintStart_toStartOf="@id/left_margin_guideline"
        app:layout_constraintTop_toBottomOf="@id/item_forecast_humidity_label" />

    <TextView
        android:id="@+id/item_forecast_current_condition_value"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/item_forecast_current_condition_label"
        app:layout_constraintStart_toEndOf="@id/column1_barrier"
        tools:text="Cloudy" />

    <TextView
        android:id="@+id/item_forecast_chance_of_precipitation_label"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_forecast_chance_of_precipitation_label"
        app:layout_constraintStart_toStartOf="@id/left_margin_guideline"
        app:layout_constraintTop_toBottomOf="@id/item_forecast_current_condition_label" />

    <TextView
        android:id="@+id/item_forecast_chance_of_precipitation_value"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/margin_medium"
        android:paddingEnd="@dimen/margin_medium"
        android:textAlignment="viewEnd"
        app:layout_constraintBaseline_toBaselineOf="@id/item_forecast_chance_of_precipitation_label"
        app:layout_constraintStart_toEndOf="@id/column1_barrier"
        tools:text="100%" />


</androidx.constraintlayout.widget.ConstraintLayout>